# archive-warrior-leaderboard-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  warrior_rank.py  warriors.py
.github/workflows/: publish-to-pypi.yaml
