[project]
name = "warriors"
version = "0.1.1"
description = "Inspect and watch ArchiveTeam leaderboards on the command line"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["warriors.py"]
